syntax = "proto3";
package metric;





/*
UpdateCollectorMetricByName请求
*/
message UpdateCollectorMetricByNameRequest {
message Parent {
    /*
    指标名
    */
    string name = 1 ;
}
        
message TagDefine {
    /*
    名字
    */
    string name = 1 ;
    /*
    默认值
    */
    string default = 2 ;
    /*
    是否只读
    */
    bool readOnly = 3 ;
    /*
    描述
    */
    string description = 4 ;
    /*
    值类型
    */
    string valueType = 5 ;
}
        
message ParamDefine {
    /*
    名字
    */
    string name = 1 ;
    /*
    值类型
    */
    string valueType = 2 ;
    /*
    默认值
    */
    string default = 3 ;
    /*
    是否只读
    */
    bool readOnly = 4 ;
}
        
    
    /*
    父指标
    */
    Parent parent = 1 ;
    /*
    指标名
    */
    string name = 2 ;
    /*
    指标key
    */
    string key = 3 ;
    /*
    指标名
    */
    string keyName = 4 ;
    /*
    标签
    */
    repeated string labels = 5 ;
    /*
    指标类型
    */
    string metricType = 6 ;
    /*
    指标数据类型
    */
    string dataType = 7 ;
    /*
    所属Agent
    */
    string agentType = 8 ;
    /*
    维度定义
    */
    repeated TagDefine tagDefine = 9 ;
    /*
    参数定义
    */
    repeated ParamDefine paramDefine = 10 ;
    /*
    帮助
    */
    string help = 11 ;
    /*
    单位
    */
    string unit = 12 ;
}

/*
UpdateCollectorMetricByName返回
*/
message UpdateCollectorMetricByNameResponse {
    /*
    指标id
    */
    string metricId = 1 ;
}

/*
UpdateCollectorMetricByNameApi返回
*/
message UpdateCollectorMetricByNameResponseWrapper {
    /*
    返回码
    */
    int32 code = 1 ;
    /*
    返回码解释
    */
    string codeExplain = 2 ;
    /*
    错误详情
    */
    string error = 3 ;
    /*
    返回数据
    */
    metric.UpdateCollectorMetricByNameResponse data = 4 ;
}

